# Observation-on-kmeans

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: testing.yml
paper_experiments/: kmeans_in_prac_experiments.ipynb  kmeans_in_practice_experiments.ipynb  organizing_results.ipynb  theoretical_experiments.ipynb
src/kmeans_jax/: __about__.py  __init__.py  _sdp.py  _spectral_clustering.py  hartigan_kmeans.py  kmeans.py  kmeans_in_practice.py  svd_utils.py
src/kmeans_jax/EM/: __init__.py  _expectation_maximization.py
src/kmeans_jax/kmeans/: __init__.py  _common_functions.py  _hartigan.py  _init_methods.py  _kmeans_wrapper.py  _lederman.py  _lloyd.py
src/kmeans_jax/masked_kmeans/: _common_functions.py  _hartigan.py  _lloyd.py
src/kmeans_jax/scripts/: __init__.py  _general_experiments.py  kmeans_in_practice.py  lloyd_and_hart_exps.py
src/kmeans_jax/theory_experiments/: __init__.py  _main_theorem.py  _plot.py  _theorem_warmup.py  _typical_partition_theorem.py  _union_boun_cor.py  _utils.py
tests/: test_kmeans.py
