[project]
name = "Observation-on-kmeans"
dynamic = ["version"]
description = "Numerical experiments for 'An Observation Lloyds k-Means Algorithm in High Dimensions.'"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = []
authors = [
  { name = "Author 1"},
  { name = "Author 2"}
]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "jax",
  "jaxlib",
  "numpy",
  "matplotlib",
  "tqdm",
  "scipy",
  "scikit-learn",
  "seaborn",
  "jaxtyping"
]

[project.optional-dependencies]
dev = [
  "hatch",
  "pytest",
  "mypy",
  "pre-commit",
  "ruff",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
include = [
  "src/kmeans_jax"
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/kmeans_jax",
]

[tool.hatch.build.hooks.vcs]
version-file = "src/kmeans_jax/__about__.py"

[tool.ruff]
extend-include = ["*.ipynb"]
lint.fixable = ["I001", "F401"]
line-length = 90
lint.ignore = ["E402", "E721", "E731", "E741", "F722"]
lint.select = ["E", "F", "I001"]
src = ["src"]

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false

[tool.black]
line-length = 90

[tool.pyright]
reportIncompatibleMethodOverride = true
include = ["kmeans_jax", "tests"]